# EEG-Pype

./: .gitignore  .ruff.toml  CHANGELOG.md  CITATION.cff  Detailed_installation.md  Environment.yaml  Environment.yml  README.md  pyproject.toml
src/: AAL2_Vox.xlsx  AAL2_VoxLabels.csv  AAL2_VoxLabels_cortical.csv  AAL3_Vox.xlsx  AAL3_VoxLabels.csv  AAL3_VoxLabels_cortical.csv  BNA_Vox.xlsx  BNA_VoxLabels.csv  BNA_VoxLabels_cortical.csv  EEG-Pype_test_EEG.bdf  aal2_coordinates.csv  eeg_processing_script.py  eeg_processing_settings.py  eeg_quantitative_analysis.py
src/eeg_preprocessing_umcu/: eeg_processing_script.py  eeg_processing_settings.py  eeg_quantitative_analysis.py
