[build-system]
requires = ["setuptools>=64.0.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [{ name = "Yorben Lodema", email = "github.book503@passmail.com" }, { name = "Herman van Dellen"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "PySimpleGUI",
    "pandas",
    "mne",
    "numpy",
    "matplotlib",
    "scipy",
    "scikit-learn",
    "openpyxl",
    "nibabel",
    "antropy",
    "networkx",
    "psutil",
]
description = "Resting-state EEG preprocessing and analysis"
keywords = ["eeg", "preprocessing", "resting-state"]
license = { file = "LICENSE" }
name = "EEG-Pype"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
version = "0.1.0"

[project.optional-dependencies]
dev = [
    "build",           # build is not only used in publishing (below), but also in the template's test suite
    "bump-my-version",
    "coverage [toml]",
    "pytest",
    "pytest-cov",
    "ruff",
    "tox",
]
publishing = ["build", "twine", "wheel"]

[project.urls]
Repository = "https://github.com/yorbenlodema/EEG-Pype"
Issues = "https://github.com/yorbenlodema/EEG-Pype/issues"
Changelog = "https://github.com/yorbenlodema/EEG-Pype/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/EEG_Pype"]
command_line = "-m pytest"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310
skip_missing_interpreters = true
[testenv]
commands = pytest
extras = dev
"""

[tool.bumpversion]
current_version = "0.1.0"

[[tool.bumpversion.files]]
filename = "src/EEG-Pype/__init__.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "CITATION.cff"
